Improvements in CMake

--- a/demo/cpu_planar3d/CMakeLists.txt
+++ b/demo/cpu_planar3d/CMakeLists.txt
@@ -6,8 +6,6 @@ project(${PROJECT_NAME})
 # Set C++17 standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "-Ofast -march=native -mprefer-vector-width=512 ${CMAKE_CXX_FLAGS} -Wall")
-set(CMAKE_C_FLAGS "-Ofast -march=native  -mprefer-vector-width=512 ${CMAKE_C_FLAGS} -Wall")
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/forms.c
@@ -24,5 +22,8 @@ add_executable(${PROJECT_NAME} forms.c main.cpp)
 
 # Target libraries
 target_link_libraries(${PROJECT_NAME} dolfinx)
+
+# Custom compilation flags
+target_compile_options(${PROJECT_NAME} PUBLIC -Ofast -march=native -mprefer-vector-width=512 -Wall)
 
 message(STATUS ${CMAKE_CXX_FLAGS})
