--- a/demo/gpu_scatter/CMakeLists.txt
+++ b/demo/gpu_scatter/CMakeLists.txt
@@ -9,8 +9,6 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CXX_FLAGS "-Ofast ${CMAKE_CXX_FLAGS} -Wall")
-set(CMAKE_C_FLAGS "-Ofast ${CMAKE_C_FLAGS} -Wall")
 
 find_package(DOLFINX REQUIRED)
 find_package(CUDA 11.0 REQUIRED)
@@ -24,5 +22,8 @@ add_executable(${PROJECT_NAME} main.cpp)
 # Target libraries
 target_link_libraries(${PROJECT_NAME} dolfinx ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC SYSTEM ${CUDA_INCLUDE_DIRS})
+
+# Custom compilation flags
+target_compile_options(${PROJECT_NAME} PUBLIC -Ofast -Wall)
 
 message(STATUS ${CMAKE_CXX_FLAGS})
