--- a/demo/gpu_scatter/CMakeLists.txt
+++ b/demo/gpu_scatter/CMakeLists.txt
@@ -11,19 +11,21 @@ set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 find_package(DOLFINX REQUIRED)
-find_package(CUDA 11.0 REQUIRED)
+#find_package(CUDA 11.0 REQUIRED)
+find_package(CUDAToolkit REQUIRED)
+
 find_package(Boost 1.70 REQUIRED program_options)
 
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../common" ".")
 
 # Executable
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} cuda_kernels.cu main.cpp)
 
 # Target libraries
-target_link_libraries(${PROJECT_NAME} dolfinx ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} Boost::program_options)
+target_link_libraries(${PROJECT_NAME} dolfinx CUDA::cudart CUDA::cublas Boost::program_options)
 target_include_directories(${PROJECT_NAME} PUBLIC SYSTEM ${CUDA_INCLUDE_DIRS})
 
 # Custom compilation flags
-target_compile_options(${PROJECT_NAME} PUBLIC -Ofast -Wall)
+#target_compile_options(${PROJECT_NAME} PUBLIC -Ofast -Wall)
 
 message(STATUS ${CMAKE_CXX_FLAGS})
