--- a/demo/gpu_scatter/CMakeLists.txt
+++ b/demo/gpu_scatter/CMakeLists.txt
@@ -7,6 +7,7 @@ project(${PROJECT_NAME})
 # Set C++17 standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 14)
+set(CMAKE_CUDA_ARCHITECTURES 80)
 set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
