--- a/demo/gpu_scatter_local/CMakeLists.txt
+++ b/demo/gpu_scatter_local/CMakeLists.txt
@@ -17,7 +17,8 @@ find_package(Boost 1.70 REQUIRED program_options)
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../common" ".")
 
 # Executable
-add_executable(${PROJECT_NAME} main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/../../common/cuda/scatter.cu)
+set(CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../../common/cuda/)
+add_executable(${PROJECT_NAME} main.cpp ${CUDA_SOURCES}/scatter.cu)
 
 # Target libraries
 target_link_libraries(${PROJECT_NAME} dolfinx ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES} Boost::program_options)
