Rebased to main branch

--- a/demo/gpu_scatter_mpi/CMakeLists.txt
+++ b/demo/gpu_scatter_mpi/CMakeLists.txt
@@ -9,9 +9,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CUDA_STANDARD 14)
 set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+set(CMAKE_CUDA_ARCHITECTURES 80)
 
 find_package(DOLFINX REQUIRED)
-#find_package(CUDA 11.0 REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 
 find_package(Boost 1.70 REQUIRED program_options)
@@ -19,7 +19,8 @@ find_package(Boost 1.70 REQUIRED program_options)
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../common" ".")
 
 # Executable
-add_executable(${PROJECT_NAME} cuda_kernels.cu main.cpp)
+set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../common/cuda)
+add_executable(${PROJECT_NAME} main.cpp ${SOURCE_DIR}/scatter.cu)
 
 # Target libraries
 target_link_libraries(${PROJECT_NAME} dolfinx CUDA::cudart CUDA::cublas Boost::program_options)
