multinode and nvtx markers

--- a/demo/gpu_cg/CMakeLists.txt
+++ b/demo/gpu_cg/CMakeLists.txt
@@ -26,6 +26,6 @@ add_custom_command(
 add_executable(${PROJECT_NAME} main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.c CUDA/scatter.cu CUDA/mass_kernel.cu)
 
 include_directories("../../../src")
-target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart CUDA::cublas dolfinx Boost::program_options)
+target_link_libraries(${PROJECT_NAME} PRIVATE CUDA::cudart CUDA::cublas dolfinx Boost::program_options nvToolsExt)
 target_include_directories(${PROJECT_NAME} PUBLIC SYSTEM ${CUDA_INCLUDE_DIRS})
 
